app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

/* Hide Scrollbars */
@layer utilities {
  .no-scrollbar::-webkit-scrollbar {
      display: none;
  }

  .no-scrollbar {
      -ms-overflow-style: none;
      scrollbar-width: none;
  }
}

/* NextUI overlay full height nad width */
html, body {
  min-height: 100vh;
  margin: 0;
  padding: 0;
}

div[data-overlay-container="true"] {
  height: 100vh;
}

aside{
  top: 52px;
}

